[gd_scene load_steps=20 format=4 uid="uid://df4wg2ro2efnw"]

[ext_resource type="Script" uid="uid://dn2alxqhqsa3o" path="res://scripts/world.gd" id="1_4wyf3"]
[ext_resource type="PackedScene" uid="uid://bmg8m4gc6adp4" path="res://scenes/player.tscn" id="1_nnsk1"]
[ext_resource type="Texture2D" uid="uid://bcuqfdntqmmht" path="res://sprites/level_spritesheet.png" id="2_rwgxs"]
[ext_resource type="Texture2D" uid="uid://bbyd2n7yf6v3a" path="res://sprites/tutorial_interact.png" id="4_k0juu"]
[ext_resource type="Theme" uid="uid://cupo73i60fr6h" path="res://themes/control_theme.tres" id="6_e3hyu"]
[ext_resource type="PackedScene" uid="uid://b8xq4tdcfwxol" path="res://scenes/shop_ui.tscn" id="6_i7141"]
[ext_resource type="PackedScene" uid="uid://wvlrgn6cmtt6" path="res://scenes/cave_light.tscn" id="6_qfnet"]
[ext_resource type="Texture2D" uid="uid://b4akfd2js1ns1" path="res://sprites/inventory_slot.png" id="7_w7kh3"]
[ext_resource type="Theme" uid="uid://co0t04pkj8m4q" path="res://themes/button_theme.tres" id="8_e3hyu"]
[ext_resource type="Texture2D" uid="uid://d24iq6drdtui8" path="res://sprites/resume_button.png" id="9_q5onr"]
[ext_resource type="Texture2D" uid="uid://cbojuajek6ym" path="res://sprites/back_arrow.png" id="10_jhx03"]
[ext_resource type="PackedScene" uid="uid://b0gr6v76knw52" path="res://scenes/color_snap_shader.tscn" id="12_jhx03"]
[ext_resource type="Texture2D" uid="uid://crapu003avvv3" path="res://sprites/color_snap_palette.png" id="13_o8fc1"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_w7kh3"]
texture = ExtResource("2_rwgxs")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, 0, -8, 0, -8, 8, 8, 8)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, 0, -8, 0, -8, -8, 8, -8)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:2/0 = 0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:2/0 = 0
6:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
5:3/0 = 0
5:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, 8, -8, -8, 8, -8)
7:2/0 = 0
3:3/0 = 0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:3/0 = 0
4:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:4/0 = 0
0:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:4/0 = 0
1:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, 0, -8, 0, -8, 8, 8, 8)
2:4/0 = 0
2:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, 0, -8, 0, -8, -8, 8, -8)
3:4/0 = 0
3:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 0, 8, 0, 8)
8:3/0 = 0
9:3/0 = 0
4:4/0 = 0
4:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 8, 8, 8, 0, -8, 0, -8)
5:4/0 = 0
5:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, 8, -8, 8, 0, 0)
8:2/0 = 0
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 0, 8, 0, 8)
4:1/0 = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:0/0 = 0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 8, 8, 8, 0, -8, 0, -8)
5:1/0 = 0
6:0/0 = 0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 8, 8, 8, 0, 0, 0, 0)
6:1/0 = 0
7:0/0 = 0
7:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 0, 0, 0, 0)
7:1/0 = 0
8:1/0 = 0
9:2/0 = 0
0:5/0 = 0
0:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, 0, 8, -8, -8, -8, -8, 8, 8, 8)
0:6/0 = 0
0:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, 0, 8, -8, -8, -8, -8, 8, 8, 8)
1:6/0 = 0
1:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, 0, -8, 0, -8, 8, 8, 8)
2:6/0 = 0
2:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, 0, -8, 0, -8, -8, 8, -8)
3:6/0 = 0
3:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 0, 8, 0, 8)
4:6/0 = 0
4:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 8, 8, 8, 0, -8, 0, -8)
5:6/0 = 0
5:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, 8, -8, 8, 0, 0)
6:6/0 = 0
6:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 0, 0, 0, 0)
4:5/0 = 0
4:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, 0, 8, -8, -8, -8, -8, 8, 8, 8)
3:5/0 = 0
3:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, 0, 8, -8, -8, -8, -8, 8, 8, 8)
2:5/0 = 0
2:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, 0, 8, -8, -8, -8, -8, 8, 8, 8)
1:5/0 = 0
1:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, 0, 8, -8, -8, -8, -8, 8, 8, 8)
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
6:4/0 = 0
6:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 0, 0, 0, 0)
9:1/0 = 0
9:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:0/0 = 0
8:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:6/0 = 0

[sub_resource type="TileSet" id="TileSet_k0juu"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_w7kh3")

[sub_resource type="CircleShape2D" id="CircleShape2D_rwgxs"]
radius = 40.0

[sub_resource type="CircleShape2D" id="CircleShape2D_4wyf3"]
radius = 17.0

[sub_resource type="CircleShape2D" id="CircleShape2D_qfnet"]
radius = 37.054016

[sub_resource type="CircleShape2D" id="CircleShape2D_w7kh3"]
radius = 89.358826

[node name="World" type="Node2D"]
script = ExtResource("1_4wyf3")

[node name="Tutorial" type="Sprite2D" parent="."]
visible = false
position = Vector2(313, 443)
texture = ExtResource("4_k0juu")

[node name="Player" parent="." instance=ExtResource("1_nnsk1")]
position = Vector2(313, 450)

[node name="Level" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAEACQAAAAAAAAAAAAFACQAAAAAAAAAAAAGACQAAAAAAAAAAAAHACQAAAAAAAAAAAAIACQAAAAAAAAAAAAJACQAAAAAAAAAAAAKACQAAAAAAAAAAAALACQAAAAAAAAAAAAMACQAAAAAAAAAAAANACQAAAAAAAAAAAAOACQAAAAAAAAAAAAPACQAAAAAAAAAAAAQACQAAAAAAAAAAAARACQAAAAAAAAAAAASACQAAAAAAAAAAAATACQAAAAAAAAAAAAUACQAAAAAAAAAAAAVACQAAAAAAAAAAAAWACQAAAAAAAAAAAAXACQAAAAAAAAAAAAYACQAAAAAAAAAAAAZACQAAAAAAAAAAAAaACQAAAAEAAIAAAAbACQAAAAEAAIAAAAcACQAAAACAAIAAAAdACQAAAACAAIAAAAeACQAAAACAAIAAAAfACQAAAACAAIAAAAgACQAAAACAAIAAAAhACQAAAACAAIAAAAiACQAAAACAAIAAAAEACIAAAAAAAAAAAAEACMAAAAAAAAAAAAEACEAAAAAAAAAAAAFACIAAAAAAAAAAAAFACMAAAAAAAAAAAAGACEAAAACAAAAAAAGACMAAAAAAAAAAAAFACEAAAAAAAAAAAAHACEAAAAFAAEAAAAFACAAAAAAAAAAAAAGACAAAAABAAEAAAAHACAAAAAAAAEAAAAGAB8AAAAAAAAAAAAHAB8AAAAAAAAAAAAIACAAAAABAAEAAAAIACEAAAAAAAAAAAAIAB8AAAABAAAAAAAEACAAAAAAAAAAAAAGAB4AAAAAAAAAAAAiAB4AAAABAAIAAAAhAB4AAAAAAAIAAAAhAB0AAAACAAIAAAAhABwAAAACAAIAAAAhABsAAAACAAIAAAAhABoAAAAAAAAAAAAgABoAAAADAAIAAAAgABkAAAAAAAAAAAAfABkAAAAAAAAAAAAfABgAAAAAAAAAAAAeABgAAAAAAAAAAAAeABcAAAAAAAAAAAAdABcAAAAAAAAAAAAcABYAAAAAAAAAAAAcABUAAAAAAAAAAAAbABUAAAAAAAAAAAAbABQAAAAAAAAAAAAaABQAAAAAAAAAAAAZABMAAAAAAAAAAAAYABMAAAAAAAAAAAAYABIAAAAAAAAAAAAXABIAAAAAAAAAAAAWABIAAAAAAAAAAAAVABIAAAAAAAAAAAAVABEAAAAAAAAAAAAUABEAAAAAAAAAAAATABEAAAAAAAAAAAASABEAAAAAAAAAAAARABEAAAAAAAAAAAAQABEAAAAAAAAAAAAQABIAAAAAAAAAAAAPABIAAAAAAAAAAAAOABIAAAAJAAEAAAANABIAAAAAAAAAAAAMABIAAAAAAAAAAAAMABMAAAAAAAAAAAALABMAAAAAAAAAAAAKABMAAAADAAAAAAAKABQAAAAAAAAAAAAJABQAAAAAAAAAAAAJABUAAAAAAAAAAAAIABUAAAAAAAAAAAAIABYAAAAAAAAAAAAHABYAAAAAAAAAAAAHABcAAAAAAAAAAAAHABgAAAAAAAAAAAAGABgAAAAAAAAAAAAGABkAAAAAAAAAAAAFABkAAAAAAAAAAAAFABoAAAAAAAAAAAAFABsAAAAAAAAAAAAEABsAAAAAAAAAAAAEABwAAAAAAAAAAAAEAB0AAAAAAAAAAAAEAB4AAAAAAAAAAAAEAB8AAAAAAAAAAAAFAB4AAAAAAAAAAAAFAB8AAAAAAAAAAAAFABwAAAAAAAAAAAAFAB0AAAAAAAAAAAAiAB0AAAACAAIAAAAiABwAAAADAAIAAAAiABsAAAAAAAAAAAAiABoAAAAAAAAAAAAiABkAAAAAAAAAAAAhABkAAAAAAAAAAAAhABgAAAAAAAAAAAAgABgAAAAAAAAAAAAgABcAAAAAAAAAAAAfABcAAAAAAAAAAAAfABYAAAADAAAAAAAeABYAAAADAAAAAAAeABUAAAAAAAAAAAAdABUAAAADAAAAAAAcABQAAAAAAAAAAAAdABQAAAAAAAAAAAAdABYAAAAAAAAAAAAdABMAAAAAAAAAAAAcABMAAAAAAAAAAAAcABIAAAAAAAAAAAAbABIAAAAAAAAAAAAaABIAAAAAAAAAAAAbABMAAAAAAAAAAAAaABMAAAAAAAAAAAAZABIAAAAAAAAAAAAKABIAAAAAAAAAAAALABIAAAADAAAAAAALABEAAAAAAAAAAAAMABEAAAAAAAAAAAANABEAAAAAAAAAAAANABAAAAAAAAAAAAAOABAAAAAJAAEAAAAOAA8AAAAJAAEAAAAPAA8AAAAAAAAAAAAQAA8AAAAAAAAAAAARAA4AAAAAAAAAAAASAA4AAAAAAAAAAAATAA4AAAAAAAAAAAAUAA4AAAAAAAAAAAAVAA4AAAAAAAAAAAAWAA4AAAAAAAAAAAAXAA4AAAAAAAAAAAAYAA4AAAAAAAAAAAAZAA4AAAAAAAAAAAAaAA4AAAAAAAAAAAAbAA4AAAAAAAAAAAAbAA8AAAAAAAAAAAAcABAAAAAAAAAAAAAdABAAAAAAAAAAAAAdABEAAAAAAAAAAAAeABIAAAAAAAAAAAAeABMAAAAAAAAAAAAfABMAAAAAAAAAAAAfABQAAAAAAAAAAAAgABQAAAAAAAAAAAAgABUAAAAAAAAAAAAhABYAAAAAAAAAAAAhABcAAAAAAAAAAAAgABYAAAAAAAAAAAAfABUAAAAAAAAAAAAeABQAAAAAAAAAAAAdABIAAAAAAAAAAAAcABEAAAAAAAAAAAAbABEAAAAAAAAAAAAaABEAAAAAAAAAAAAaABAAAAAAAAAAAAAZABAAAAAAAAAAAAAZABEAAAAAAAAAAAAYABEAAAADAAAAAAAXABEAAAADAAAAAAAWABEAAAAAAAAAAAAWABAAAAADAAAAAAAVABAAAAAAAAAAAAAUABAAAAAAAAAAAAATABAAAAAAAAAAAAASABAAAAAAAAAAAAARABAAAAAAAAAAAAAQABAAAAAAAAAAAAAPABAAAAAAAAAAAAAOABEAAAAJAAEAAAAPABEAAAAAAAAAAAARAA8AAAAAAAAAAAASAA8AAAAAAAAAAAATAA8AAAAAAAAAAAAUAA8AAAAAAAAAAAAVAA8AAAAAAAAAAAAWAA8AAAAAAAAAAAAXAA8AAAAAAAAAAAAYAA8AAAAAAAAAAAAZAA8AAAAAAAAAAAAYABAAAAAAAAAAAAAXABAAAAAAAAAAAAAaAA8AAAAAAAAAAAAbABAAAAAAAAAAAAADACQAAAAAAAAAAAACACQAAAAAAAAAAAACACMAAAAAAAAAAAACACIAAAAAAAAAAAADACIAAAAAAAAAAAADACMAAAAAAAAAAAADACEAAAAAAAAAAAADACAAAAAAAAAAAAACACAAAAAAAAAAAAACACEAAAAAAAAAAAACAB8AAAAAAAAAAAACAB4AAAAAAAAAAAADAB4AAAAAAAAAAAADAB0AAAAAAAAAAAADAB8AAAAAAAAAAAACAB0AAAAAAAAAAAACABwAAAAAAAAAAAACABsAAAAAAAAAAAADABsAAAAAAAAAAAADABoAAAADAAAAAAADABwAAAAAAAAAAAACABoAAAAAAAAAAAACABkAAAAAAAAAAAADABkAAAAAAAAAAAADABgAAAAAAAAAAAAEABgAAAAAAAAAAAAEABkAAAAAAAAAAAAEABoAAAAAAAAAAAAFABgAAAAAAAAAAAAFABcAAAAAAAAAAAAFABYAAAAAAAAAAAAGABYAAAAAAAAAAAAHABUAAAAAAAAAAAAHABQAAAAAAAAAAAAIABQAAAAAAAAAAAAIABMAAAAAAAAAAAAJABMAAAADAAAAAAAJABIAAAAAAAAAAAAGABcAAAAAAAAAAAACABgAAAAAAAAAAAACABcAAAAAAAAAAAADABcAAAAAAAAAAAADABYAAAAAAAAAAAAEABYAAAAAAAAAAAAEABUAAAAAAAAAAAAFABUAAAAAAAAAAAAFABQAAAAAAAAAAAAGABQAAAAAAAAAAAAGABMAAAAAAAAAAAAHABMAAAAAAAAAAAAHABIAAAAAAAAAAAAIABIAAAAAAAAAAAAIABEAAAAAAAAAAAAJABEAAAAAAAAAAAAJABAAAAAAAAAAAAAKABAAAAAAAAAAAAALABAAAAAAAAAAAAALAA8AAAAAAAAAAAAMAA8AAAAAAAAAAAANAA8AAAAAAAAAAAANAA4AAAAAAAAAAAAOAA4AAAAJAAEAAAAPAA4AAAAAAAAAAAAQAA4AAAAAAAAAAAAQAA0AAAAAAAAAAAAMABAAAAAAAAAAAAAKABEAAAAAAAAAAAAGABUAAAAAAAAAAAAEABcAAAAAAAAAAAAEABQAAAAAAAAAAAAHABEAAAAAAAAAAAAKAA8AAAAAAAAAAAAJAA8AAAAAAAAAAAAMAA4AAAAAAAAAAAAOAA0AAAAJAAEAAAAPAA0AAAAAAAAAAAARAA0AAAAAAAAAAAASAA0AAAAAAAAAAAATAA0AAAAAAAAAAAAUAA0AAAAAAAAAAAAVAA0AAAAAAAAAAAAWAA0AAAAAAAAAAAAfABIAAAAAAAAAAAAhABUAAAAAAAAAAAAiABcAAAAAAAAAAAAiABgAAAAAAAAAAAANAA0AAAAAAAAAAAAXAA0AAAABAAAAAAALAA4AAAAAAAAAAAAIABAAAAABAAAAAAAGABIAAAABAAAAAAAFABMAAAABAAAAAAADABUAAAABAAAAAAACABYAAAABAAAAAAAcAA8AAAABAAAAAAAeABEAAAABAAAAAAAgABMAAAABAAAAAAAhABQAAAABAAAAAAAiABYAAAABAAAAAAAjABgAAAAAAAAAAAAjABkAAAAAAAAAAAAjABoAAAAAAAAAAAAjABsAAAAAAAAAAAAjABwAAAAAAAAAAAAjAB0AAAACAAIAAAAjAB4AAAACAAIAAAAjACQAAAACAAIAAAAkABkAAAAAAAAAAAAkABoAAAAAAAAAAAAkABsAAAAAAAAAAAAkABwAAAAAAAAAAAAkAB0AAAAAAAAAAAAkAB4AAAADAAIAAAAkACQAAAACAAIAAAAlACQAAAACAAIAAAAlABsAAAAAAAAAAAAlABwAAAAAAAAAAAAlAB0AAAAAAAAAAAAlAB4AAAAAAAAAAAAlAB8AAAAAAAAAAAAlABoAAAABAAAAAAAkABgAAAABAAAAAAAjABcAAAABAAAAAAALABQAAAACAAAAAAAGABoAAAAEAAAAAAAHABkAAAAAAAAAAAAIABcAAAAEAAAAAAAJABYAAAACAAAAAAAKABUAAAAAAAAAAAAMABQAAAAAAAAAAAANABMAAAACAAAAAAAOABMAAAAJAAEAAAAPABMAAAACAAAAAAAQABMAAAAAAAAAAAARABIAAAAAAAAAAAASABIAAAACAAAAAAATABIAAAAHAAAAAAAUABIAAAACAAAAAAAVABMAAAAEAAAAAAAWABMAAAAEAAAAAAAXABMAAAACAAAAAAAYABQAAAAHAAAAAAAZABQAAAACAAAAAAAaABUAAAACAAAAAAAbABYAAAAAAAAAAAAcABcAAAAEAAAAAAAdABgAAAACAAAAAAAeABkAAAAAAAAAAAAfABoAAAAAAAAAAAAgABsAAAACAAIAAAAQABQAAAAAAAAAAAAQABUAAAAEAAAAAAAOACMAAAACAAEAAAATACMAAAAGAAIAAAAmABwAAAAAAAAAAAAmAB0AAAAAAAAAAAAmAB4AAAAAAAAAAAAmAB8AAAAAAAAAAAAmACAAAAAAAAAAAAAmACEAAAAAAAAAAAAmACIAAAAAAAAAAAAmACMAAAAAAAAAAAAmACQAAAAAAAAAAAAnABwAAAAAAAAAAAAnAB0AAAAAAAAAAAAnAB4AAAAAAAAAAAAnAB8AAAAAAAAAAAAnACAAAAAAAAAAAAAnACEAAAAAAAAAAAAnACIAAAAAAAAAAAAnACMAAAAAAAAAAAAnACQAAAAAAAAAAAAoACMAAAAAAAAAAAAoACQAAAAAAAAAAAApACMAAAAAAAAAAAApACQAAAAAAAAAAAAoACAAAAAAAAAAAAAoACEAAAAAAAAAAAAoACIAAAAAAAAAAAAmABsAAAABAAAAAAAoAB8AAAABAAAAAAApACIAAAABAAAAAAACACUAAAAAAAAAAAACACYAAAAAAAAAAAACACcAAAACAAAAAAADACUAAAAAAAAAAAADACYAAAAAAAAAAAADACcAAAACAAAAAAAEACUAAAAAAAAAAAAEACYAAAAAAAAAAAAEACcAAAACAAAAAAAFACUAAAAAAAAAAAAFACYAAAAAAAAAAAAFACcAAAACAAAAAAAGACUAAAAAAAAAAAAGACYAAAAAAAAAAAAGACcAAAAAAAAAAAAHACUAAAAAAAAAAAAHACYAAAAAAAAAAAAHACcAAAAAAAAAAAAIACUAAAAAAAAAAAAIACYAAAAAAAAAAAAIACcAAAAAAAAAAAAJACUAAAAAAAAAAAAJACYAAAAAAAAAAAAJACcAAAAAAAAAAAAKACUAAAAAAAAAAAAKACYAAAAAAAAAAAAKACcAAAACAAAAAAALACUAAAAAAAAAAAALACYAAAAAAAAAAAALACcAAAACAAAAAAAMACUAAAAAAAAAAAAMACYAAAAAAAAAAAAMACcAAAAAAAAAAAANACUAAAAAAAAAAAANACYAAAAAAAAAAAANACcAAAAAAAAAAAAOACUAAAAAAAAAAAAOACYAAAAAAAAAAAAOACcAAAAAAAAAAAAPACUAAAAAAAAAAAAPACYAAAAAAAAAAAAPACcAAAAAAAAAAAAQACUAAAAAAAAAAAAQACYAAAAAAAAAAAAQACcAAAACAAAAAAARACUAAAAAAAAAAAARACYAAAAAAAAAAAARACcAAAACAAAAAAASACUAAAAAAAAAAAASACYAAAAAAAAAAAASACcAAAACAAAAAAATACUAAAAAAAAAAAATACYAAAAAAAAAAAATACcAAAACAAAAAAAUACUAAAAAAAAAAAAUACYAAAAAAAAAAAAUACcAAAAAAAAAAAAVACUAAAAAAAAAAAAVACYAAAAAAAAAAAAVACcAAAAEAAAAAAAWACUAAAAAAAAAAAAWACYAAAAAAAAAAAAWACcAAAACAAAAAAAXACUAAAAAAAAAAAAXACYAAAAAAAAAAAAXACcAAAACAAAAAAAYACUAAAAAAAAAAAAYACYAAAAAAAAAAAAYACcAAAACAAAAAAAZACUAAAAAAAAAAAAZACYAAAAAAAAAAAAZACcAAAAAAAAAAAAaACUAAAAAAAAAAAAaACYAAAAAAAAAAAAaACcAAAAAAAAAAAAbACUAAAAAAAAAAAAbACYAAAAAAAAAAAAbACcAAAAAAAAAAAAcACUAAAAEAAIAAAAcACYAAAAAAAAAAAAcACcAAAAAAAAAAAAdACUAAAACAAIAAAAdACYAAAAAAAAAAAAdACcAAAAAAAAAAAAeACUAAAACAAIAAAAeACYAAAAAAAAAAAAeACcAAAAEAAAAAAAfACUAAAACAAIAAAAfACYAAAAAAAAAAAAfACcAAAACAAAAAAAgACUAAAACAAIAAAAgACYAAAAEAAIAAAAgACcAAAACAAAAAAAhACUAAAACAAIAAAAhACYAAAAEAAIAAAAhACcAAAACAAAAAAAiACUAAAACAAIAAAAiACYAAAAAAAAAAAAiACcAAAAEAAAAAAAjACUAAAACAAIAAAAjACYAAAAAAAAAAAAjACcAAAAAAAAAAAAkACUAAAAEAAIAAAAkACYAAAAAAAAAAAAkACcAAAAAAAAAAAAlACUAAAAEAAIAAAAlACYAAAAAAAAAAAAlACcAAAAAAAAAAAAmACUAAAAAAAAAAAAmACYAAAAAAAAAAAAmACcAAAAAAAAAAAAnACUAAAAAAAAAAAAnACYAAAAAAAAAAAAnACcAAAAEAAAAAAAoACUAAAAAAAAAAAAoACYAAAAAAAAAAAAoACcAAAACAAAAAAApACUAAAAAAAAAAAApACYAAAAAAAAAAAApACcAAAACAAAAAAAAABwAAAABAAAAAAAAAB0AAAAAAAAAAAAAAB4AAAAAAAAAAAAAAB8AAAAAAAAAAAAAACAAAAAAAAAAAAAAACEAAAAAAAAAAAAAACIAAAAAAAAAAAAAACMAAAAAAAAAAAAAACQAAAAAAAAAAAAAACUAAAAAAAAAAAAAACYAAAAAAAAAAAABABsAAAAAAAAAAAABABwAAAAAAAAAAAABAB0AAAAAAAAAAAABAB4AAAAAAAAAAAABAB8AAAAAAAAAAAABACAAAAAAAAAAAAABACEAAAAAAAAAAAABACIAAAAAAAAAAAABACMAAAAAAAAAAAABACQAAAAAAAAAAAABACUAAAAAAAAAAAABACYAAAAAAAAAAAABABoAAAAAAAAAAAD//x8AAAAAAAAAAAD//yAAAAAAAAAAAAD//yEAAAAAAAAAAAD//yIAAAAAAAAAAAD//yMAAAAAAAAAAAD//yQAAAAAAAAAAAD//yUAAAAAAAAAAAD//yYAAAACAAAAAAD//x4AAAAAAAAAAAD//x0AAAAAAAAAAAAUACgAAAAEAAAAAAAjACgAAAAEAAAAAAAlACAAAAADAAIAAAAlACEAAAACAAIAAAAlACIAAAACAAIAAAAlACMAAAACAAIAAAAkAB8AAAACAAIAAAAkACAAAAACAAIAAAAjAB8AAAACAAIAAAAkACEAAAACAAIAAAAkACIAAAACAAIAAAAkACMAAAACAAIAAAAjACAAAAACAAIAAAAhACMAAAACAAIAAAAiACAAAAAFAAIAAAAjACEAAAAFAAMAAAAhAB8AAAACAAIAAAAgAB4AAAABAAIAAAAgAB0AAAACAAIAAAAgABwAAAACAAIAAAAfAB4AAAADAAMAAAAeAB4AAAADAAMAAAAdAB4AAAADAAMAAAAcAB4AAAADAAMAAAAbAB4AAAADAAMAAAAcAB0AAAADAAMAAAAdAB0AAAADAAMAAAAeAB0AAAADAAMAAAAfAB0AAAADAAMAAAAbAB8AAAABAAMAAAAfAB8AAAABAAMAAAAbACMAAAACAAMAAAAfACMAAAACAAMAAAAbACAAAAAAAAMAAAAbACEAAAAAAAMAAAAbACIAAAAAAAMAAAAfACAAAAAAAAMAAAAfACEAAAAAAAMAAAAfACIAAAAAAAMAAAAiACIAAAAIAAIAAAAiACMAAAAIAAMAAAAhACIAAAAGAAIAAAAjACIAAAAJAAIAAAAjACMAAAAJAAMAAAAgAB8AAAAFAAMAAAAOAB8AAAAIAAEAAAAOAB4AAAAIAAEAAAAOAB0AAAAIAAEAAAAOABwAAAAIAAEAAAAOABsAAAAIAAEAAAAOABoAAAAIAAEAAAAOABkAAAAIAAEAAAAHABoAAAAHAAAAAAAOABgAAAAIAAEAAAAOABcAAAAIAAEAAAAOABYAAAAIAAEAAAAOABUAAAAJAAEAAAAOABQAAAAJAAEAAAAOAAwAAAAJAAEAAAANAAwAAAAAAAAAAAAMAA0AAAAAAAAAAAAPAAwAAAAAAAAAAAAQAAwAAAAAAAAAAAAMAAwAAAAAAAAAAAAKAA4AAAAAAAAAAAALAA0AAAAAAAAAAAAKAA0AAAAAAAAAAAALAAwAAAAAAAAAAAAKAAwAAAABAAAAAAARAAwAAAABAAAAAAASAAwAAAABAAAAAAATAAwAAAABAAAAAAANAAsAAAAAAAAAAAANAAoAAAAAAAAAAAANAAkAAAAAAAAAAAANAAgAAAAAAAAAAAANAAcAAAAAAAAAAAANAAYAAAAAAAAAAAANAAUAAAAAAAAAAAANAAQAAAAAAAAAAAANAAMAAAAAAAAAAAANAAIAAAAAAAAAAAAPAAsAAAAAAAAAAAAPAAoAAAAAAAAAAAAPAAkAAAAAAAAAAAAPAAgAAAAAAAAAAAAPAAcAAAAAAAAAAAAPAAYAAAAAAAAAAAAPAAUAAAAAAAAAAAAPAAQAAAAAAAAAAAAPAAMAAAAAAAAAAAAPAAIAAAAAAAAAAAAOAAsAAAAJAAEAAAAOAAoAAAAJAAEAAAAOAAkAAAAJAAEAAAAOAAgAAAAJAAEAAAAOAAcAAAAJAAEAAAAOAAYAAAAJAAEAAAAOAAUAAAAJAAEAAAAOAAQAAAAJAAEAAAAOAAMAAAAJAAEAAAAOAAIAAAAJAAEAAAANAAEAAAAAAAAAAAANAAAAAAAAAAAAAAANAP//AAAAAAAAAAANAP7/AAAAAAAAAAANAP3/AAAAAAAAAAANAPz/AAAAAAAAAAANAPv/AAAAAAAAAAANAPr/AAAAAAAAAAANAPn/AAAAAAAAAAANAPj/AAAAAAAAAAANAPf/AAAAAAAAAAAPAAEAAAAAAAAAAAAPAAAAAAAAAAAAAAAPAP//AAAAAAAAAAAPAP7/AAAAAAAAAAAPAP3/AAAAAAAAAAAPAPz/AAAAAAAAAAAPAPv/AAAAAAAAAAAPAPr/AAAAAAAAAAAPAPn/AAAAAAAAAAAPAPj/AAAAAAAAAAAPAPf/AAAAAAAAAAAOAPf/AAAJAAEAAAAOAPj/AAAJAAEAAAAOAPn/AAAJAAEAAAAOAPr/AAAJAAEAAAAOAPv/AAAJAAEAAAAOAPz/AAAJAAEAAAAOAP3/AAAJAAEAAAAOAP7/AAAJAAEAAAAOAP//AAAJAAEAAAAOAAAAAAAJAAEAAAAOAAEAAAAJAAEAAAANACMAAAAIAAAAAAAPACMAAAAAAAAAAAALACMAAAABAAAAAAAMACMAAAAAAAAAAAAQACMAAAABAAAAAAAiAB8AAAACAAIAAAAfABsAAAACAAIAAAAfABwAAAACAAIAAAAeABsAAAACAAIAAAAeABoAAAACAAIAAAAKACMAAAAGAAAAAAAgACMAAAACAAIAAAAgACIAAAAFAAIAAAAOACAAAAAIAAEAAAAOACEAAAAIAAEAAAAOACIAAAAIAAEAAAA=")
tile_set = SubResource("TileSet_k0juu")

[node name="CaveEntrance" type="Area2D" parent="."]
position = Vector2(120, 547)

[node name="CollisionShape2D" type="CollisionShape2D" parent="CaveEntrance"]
shape = SubResource("CircleShape2D_rwgxs")

[node name="TutorialSign" type="Area2D" parent="."]
position = Vector2(312, 565)

[node name="CollisionShape2D" type="CollisionShape2D" parent="TutorialSign"]
shape = SubResource("CircleShape2D_4wyf3")

[node name="TraderSign" type="Area2D" parent="."]
position = Vector2(536, 548)

[node name="CollisionShape2D" type="CollisionShape2D" parent="TraderSign"]
shape = SubResource("CircleShape2D_qfnet")

[node name="ShopUI" parent="." node_paths=PackedStringArray("player") instance=ExtResource("6_i7141")]
visible = false
offset_left = 436.0
offset_top = 442.0
offset_right = 436.32
offset_bottom = 442.0
player = NodePath("../Player")

[node name="PauseMenu" type="CanvasLayer" parent="."]
process_mode = 3
visible = false

[node name="Control" type="Control" parent="PauseMenu"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("6_e3hyu")

[node name="NinePatchRect" type="NinePatchRect" parent="PauseMenu/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -128.0
offset_right = 150.0
offset_bottom = 128.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_w7kh3")
region_rect = Rect2(0, 0, 34, 18)
patch_margin_left = 7
patch_margin_top = 7
patch_margin_right = 7
patch_margin_bottom = 7

[node name="BoxContainer" type="BoxContainer" parent="PauseMenu/Control/NinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="BoxContainer" type="BoxContainer" parent="PauseMenu/Control/NinePatchRect/BoxContainer"]
layout_mode = 2
alignment = 1
vertical = true

[node name="Resume" type="Button" parent="PauseMenu/Control/NinePatchRect/BoxContainer/BoxContainer"]
layout_mode = 2
theme = ExtResource("8_e3hyu")
text = "Resume"
icon = ExtResource("9_q5onr")

[node name="MainMenuButton" type="Button" parent="PauseMenu/Control/NinePatchRect/BoxContainer/BoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("8_e3hyu")
text = "Main Menu"
icon = ExtResource("10_jhx03")

[node name="UpgradeShopLight" parent="." instance=ExtResource("6_qfnet")]
position = Vector2(232.00003, 310)
scale = Vector2(1.85, 1.9375)

[node name="UpgradeShopEntrance" type="Area2D" parent="."]
position = Vector2(232, 310)

[node name="CollisionShape2D" type="CollisionShape2D" parent="UpgradeShopEntrance"]
shape = SubResource("CircleShape2D_w7kh3")

[node name="CaveLights" type="Node2D" parent="."]

[node name="CaveLight" parent="CaveLights" instance=ExtResource("6_qfnet")]
position = Vector2(120, 540)

[node name="TraderLight" parent="CaveLights" instance=ExtResource("6_qfnet")]
position = Vector2(520, 556)

[node name="TraderLight2" parent="CaveLights" instance=ExtResource("6_qfnet")]
position = Vector2(552, 524)

[node name="CaveLightSign" parent="CaveLights" instance=ExtResource("6_qfnet")]
position = Vector2(312, 565)

[node name="GlobalShaders" type="CanvasLayer" parent="."]

[node name="ColorSnapShader" parent="GlobalShaders" instance=ExtResource("12_jhx03")]
palette = ExtResource("13_o8fc1")

[connection signal="area_entered" from="CaveEntrance" to="." method="_on_cave_entrance_area_entered"]
[connection signal="area_exited" from="CaveEntrance" to="." method="_on_cave_entrance_area_exited"]
[connection signal="area_entered" from="TutorialSign" to="." method="_on_tutorial_sign_area_entered"]
[connection signal="area_exited" from="TutorialSign" to="." method="_on_tutorial_sign_area_exited"]
[connection signal="area_entered" from="TraderSign" to="." method="_on_trader_sign_area_entered"]
[connection signal="area_exited" from="TraderSign" to="." method="_on_trader_sign_area_exited"]
[connection signal="pressed" from="PauseMenu/Control/NinePatchRect/BoxContainer/BoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PauseMenu/Control/NinePatchRect/BoxContainer/BoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="area_entered" from="UpgradeShopEntrance" to="." method="_on_upgrade_shop_entrance_area_entered"]
[connection signal="area_exited" from="UpgradeShopEntrance" to="." method="_on_upgrade_shop_entrance_area_exited"]
